--- a/package.json
+++ b/package.json
@@ -21,7 +21,14 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "express": "^4.18.2"
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dayjs": "^1.11.10",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "helmet": "^7.1.0"
   }
 }
