--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.10.5",
+    "@types/uuid": "^9.0.7",
     "nodemon": "^3.0.2",
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.2",
@@ -23,12 +24,20 @@
   "dependencies": {
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
+    "@types/csv-parse": "^1.2.2",
+    "@types/csv-write-stream": "^2.0.3",
     "@types/express": "^4.17.21",
+    "@types/request": "^2.48.12",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "csv-parse": "^5.5.3",
+    "csv-parser": "^3.0.0",
+    "csv-write-stream": "^2.0.0",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "helmet": "^7.1.0"
+    "helmet": "^7.1.0",
+    "request": "^2.88.2",
+    "uuid": "^9.0.1"
   }
 }
